--- a/app/src/main/res/layout/download_row.xml
+++ b/app/src/main/res/layout/download_row.xml
@@ -25,66 +25,66 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="80dp">
                 <TextView
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:padding="5dp"
-                    android:text="File Name "
                     android:id="@+id/file_title"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:padding="5dp"
+                    android:text="File Name " />
                 <ProgressBar
-                    android:progress="10"
                     android:id="@+id/file_progress"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:progress="10" />
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/file_size"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Downloaded : 15MB"
-                        android:layout_width="match_parent"
-                        android:id="@+id/file_size"
-                        style="@style/TextAppearance.AppCompat.Caption"
-                        android:layout_height="wrap_content"/>
+                        style="@style/TextAppearance.AppCompat.Caption" />
                     <TextView
-                        android:layout_weight="1"
-                        android:text="Pending"
-                        android:gravity="end"
                         android:id="@+id/file_status"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         style="@style/TextAppearance.AppCompat.Caption"
-                        android:layout_height="wrap_content"/>
+                        android:layout_weight="1"
+                        android:text="Pending"
+                        android:gravity="end" />
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="-70dp"
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
+                android:orientation="vertical" >
                 <Button
                     android:id="@+id/pause_resume"
-                    android:text="PAUSE"
-                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:padding="0dp"
-                    android:layout_height="30dp"/>
+                    android:text="PAUSE" />
                 <Button
                     android:id="@+id/sharefile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
                     android:text="SHARE"
                     style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="wrap_content"
-                    android:padding="0dp"
-                    android:layout_height="30dp"/>
+                    android:padding="0dp" />
             </LinearLayout>
         </LinearLayout>
         <View
-            android:layout_below="@id/line1"
-            android:background="#606060"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:background="#606060"
+            android:layout_below="@id/line1"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
