configure upload data to Firebase

--- a/app/src/main/res/layout/input_dialog.xml
+++ b/app/src/main/res/layout/input_dialog.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtLink">
 
         <EditText
-            android:id="@+id/input"
+            android:id="@+id/edtLink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
