--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,16 +18,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextText"
+    <TextView
+        android:id="@+id/txtHeaderTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Tìm kiếm"
-        android:inputType="text"
+        android:paddingVertical="13dp"
+        android:paddingStart="15dp"
+        android:text="@string/header_tab"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColorHint="@color/white"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toEndOf="@+id/imgView" />
+
+<!--    <EditText-->
+<!--        android:id="@+id/editTextText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:ems="10"-->
+<!--        android:paddingTop="15dp"-->
+<!--        android:hint="Tìm kiếm"-->
+<!--        android:textColorHint="@color/white"-->
+<!--        android:inputType="text"-->
+<!--        android:textColor="@color/white"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/toolbar"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/imgView" />-->
 
     <ImageView
         android:id="@+id/imgView"
