--- a/app/src/main/res/layout/fragment_done.xml
+++ b/app/src/main/res/layout/fragment_done.xml
@@ -3,4 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
