--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.DowloadFile" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.DowloadFile" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/primaryDarkColor</item>
     </style>
 
-    <style name="Theme.DowloadFile" parent="Theme.MaterialComponents.Light.NoActionBar" />
+    <style name="Theme.DowloadFile" parent="Base.Theme.DowloadFile" />
 </resources>
